Reduciendo el titulo panel de administracion

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div id="adminPanel" style="display: none;">
-      <h1>Panel de Administración - Seccion de Contenido</h1>
+      <h3>Panel de Administración - BF COMPANY</h3>
 
       <form id="contentForm" class="card">
         <input type="hidden" id="sectionId" />
